<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_gallery"  android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_grades"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/menu_grades" />
        <item
            android:id="@+id/nav_deadlines"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_deadlines" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>